--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
 [dependency-groups]
-dev = [
-    "mypy>=1.18.2",
-    "ruff>=0.13.1",
-]
-lint = [
-    "mypy>=1.18.2",
-    "ruff>=0.13.1",
-]
+dev = ["mypy>=1.18.2", "ruff>=0.13.1"]
+lint = ["mypy>=1.18.2", "ruff>=0.13.1"]
+test = ["pytest>=8.4.2"]
 
 [build-system]
 requires = ["hatchling"]
@@ -56,7 +51,7 @@ select = [
     "COM",
     "C4",
     "C90",
-    "D", 
+    "D",
     "E",
     "ERA",
     "F",
@@ -73,7 +68,7 @@ select = [
     "TD",
     "TRY",
     "SIM",
-    "W"
+    "W",
 ]
 ignore = [
     "COM812",
@@ -86,7 +81,7 @@ ignore = [
     "D106",
     "D107",
     "D203",
-    "D212"
+    "D212",
 ]
 
 [tool.ruff.lint.extend-per-file-ignores]
@@ -94,4 +89,3 @@ ignore = [
 
 [tool.ruff.lint.flake8-annotations]
 allow-star-arg-any = true
-
