--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.0.0"
 description = "Package to ease the life of physics students."
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "ipykernel>=6.30.1",
+]
 [dependency-groups]
 dev = ["mypy>=1.18.2", "ruff>=0.13.1"]
 lint = ["mypy>=1.18.2", "ruff>=0.13.1"]
